[package]
name = "geyser-plugin"
version = "0.5.0"
edition = "2021"
description = "Solana Geyser plugin adapter"
readme = "../README.md"
license = "AGPL-3.0-or-later"


[features]
default = ["flatbuffers"]
serde = ["serializer/serde"]
flatbuffers = ["serializer/flatbuffers"]

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
bs58 = "0.4.0"
hashbrown = { version = "0.12.1", features = ["serde"] }
hostname = "0.3.1"
log = "0.4.14"
parking_lot = "0.12.0"
reqwest = "0.11.6"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
solana-geyser-plugin-interface = "~1.11.3"
solana-logger = "~1.11.3"
solana-program = "~1.11.3"
spl-token = "~3.5.0"
rdkafka = { version = "0.28", features = ["ssl-vendored", "sasl"] }
serializer = { path = "../serializer", optional = true }


[dependencies.tokio]
version = "~1.14"
features = [
  "fs",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]
