[package]
name = "serializer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["flatbuffers"]
flatbuffers = ["dep:flatbuffers"]
serde = []

[dependencies]
flatbuffers = { version = "2.1.2", optional = true }


serde_json = { version = "~1.0" }
solana-sdk = { version = "~1.11.3" }
serde = { version = "~1.0" }
solana-program = { version = "~1.11.3" }
solana-geyser-plugin-interface = { version = "~1.11.3" }
solana-transaction-status = { version = "~1.11.3" }
log = { version = "~0.4" }
cfg-if = "~1.0"
